--- a/english-for-kids/src/scss/mainblock.scss
+++ b/english-for-kids/src/scss/mainblock.scss
@@ -127,14 +127,12 @@
           .card-box-back {
             position: absolute;
             z-index: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
             transition: transform 0.5s ease-out;
+
+            @include flex-column;
 
             .card-image {
               margin-top: 20px;
@@ -151,7 +149,7 @@
 
               .card-title {
                 font-size: 25px;
-                font-family: "Balsamiq Sans";
+                font-family: $font-main;
               }
 
               .card-btn {
@@ -159,6 +157,7 @@
                 right: 10px;
                 width: 30px;
                 height: 30px;
+                // background: url("../assets/icons/arrow.png") contain $color-d;
                 background-color: $color-d;
                 background-image: url("../assets/icons/arrow.png");
                 background-size: contain;
@@ -211,13 +210,13 @@
           width: 200px;
           height: 50px;
           padding-top: 13px;
-          font-size: 20px;
-          font-family: "Balsamiq Sans";
           text-align: center;
           color: white;
           background-color: $color-b;
           border-radius: 5px;
           transition: background-color 0.5s ease-out;
+
+          @include font20;
         }
 
         .category-btn-start:hover {
