--- a/english-for-kids/src/scss/menu.scss
+++ b/english-for-kids/src/scss/menu.scss
@@ -6,10 +6,10 @@
   flex-direction: column;
   width: 250px;
   height: 100vh;
-  font-size: 20px;
-  font-family: "Balsamiq Sans";
   color: $color-d;
   background-color: $color-a;
+
+  @include font20;
 
   .menu-close {
     align-self: flex-end;
