--- a/english-for-kids/src/scss/mainblock.scss
+++ b/english-for-kids/src/scss/mainblock.scss
@@ -1,22 +1,18 @@
 .main {
-  display: flex;
-  justify-content: center;
+  @include flex;
 
   .main-container {
-    display: flex;
-    justify-content: center;
     max-width: 1280px;
     min-height: calc(100vh - 200px);
 
+    @include flex;
+
     .end-game {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       margin: 0 auto;
       margin-top: 50px;
-      font-size: 35px;
-      font-family: "Balsamiq Sans";
+
+      @include font35;
+      @include flex-column-center;
     };
 
     .end-hide {
@@ -24,18 +20,12 @@
     }
 
     .all-categories {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-content: center;
       width: 100%;
       height: 100%;
 
+      @include flexwrap;
+
       .category-box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         width: 280px;
         height: 250px;
         margin-top: 20px;
@@ -45,6 +35,8 @@
         border-radius: 5px;
         box-shadow: 0 10px 10px rgba(0,0,0,0.25);
         transition: transform 0.5s ease-out;
+
+        @include flex-column-center;
 
         .card-title {
           margin-top: 10px;
@@ -77,17 +69,13 @@
       }
 
       .category-card-box {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-content: center;
+        @include flexwrap;
 
         .star-box {
           align-self: center;
           width: 100%;
           height: 35px;
-          margin-right: 30px;
-          margin-left: 30px;
+          margin: 0 30px;
           overflow: hidden;
 
           .star {
@@ -103,9 +91,7 @@
           position: relative;
           width: 280px;
           height: 250px;
-          margin-top: 20px;
-          margin-right: 20px;
-          margin-left: 20px;
+          margin: 20px 20px 0 20px;
           border: 1px solid $color-e;
           border-radius: 5px;
           box-shadow: 0 10px 10px rgba(0,0,0,0.25);
